# FastAPI-app-with-Onion-Architecture

./: .gitignore  .test.env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: check.yml
src/: config_db.py  main.py
src/api/: main_router.py
src/api/routers/: tasks.py  users.py
src/db/: db.py
src/models/: tasks.py  users.py
src/repositories/: tasks.py  users.py
src/routers/: __init__.py  tasks.py  users.py
src/schemas/: tasks.py  users.py
src/services/: tasks.py  users.py
src/utils/: exceptions.py  repositories.py
tests/: test_api.py  test_tasks.py
