[project]
name = "fastapi-stast-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "asarpy==1.0.1",
    "asyncpg==0.30.0",
    "attrs==25.3.0",
    "click==8.2.1",
    "fastapi==0.116.1",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "h11==0.16.0",
    "httpx>=0.28.1",
    "idna==3.10",
    "iniconfig==2.1.0",
    "multidict==6.6.4",
    "packaging==25.0",
    "pluggy==1.6.0",
    "propcache==0.3.2",
    "psycopg2>=2.9.12",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.2",
    "pytest==8.4.1",
    "pytest-aiohttp==1.1.0",
    "pytest-asyncio==1.1.0",
    "pytest-dotenv>=0.5.2",
    "python-dotenv==1.1.1",
    "ruff>=0.15.12",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.43",
    "sqlalchemy-utils>=0.42.1",
    "starlette==0.47.2",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "uvicorn==0.35.0",
    "yarl==1.20.1",
]
