[project]
name = "fastapi-stast-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.12",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.46.0",
]

[tool.ruff.lint]
ignore = ["F402"]
